# careeragent-ai

./: .env  .env_example  .gitignore  README.md  README_PHASE2.md  README_PHASE3.md  REPO_MAP.md  api_main.py  check_env.py  debug_checklist.py  evaluator.py  full_system_debug.txt  main.py  master_tech_stack.json  mission_control.py  pyproject.toml  requests.py  run_app.py  setup_folders.py  setup_repo.py
.ai_context/: AGENT_HIERARCHY.md  MASTER_MAP.md  PHASE_1_STABLE.md  PHASE_2A_STABLE.md
_rollback/145943/: pre_fix.tgz
_rollback/20260223_153343/: pre_patch_code.tgz
_rollback/20260225_145523/: pre_final_fix.tgz
app/: main.py  main.py.bak_20260221_004939  main.py.bak_20260221_011632
app/ui/: dashboard.py  dashboard.py.bak_20260221_004939  dashboard.py.bak_20260221_011632  dashboard1.py  mission_control.py  old_dashboard.py
artifacts/1bea5ebd43a2/11_000_Microsoft_Machine_Learning_jobs_i/: ats_verification.json  cover_letter.docx  resume.docx
artifacts/1bea5ebd43a2/25_Openai_Jobs_Employment_in_United_Stat/: cover_letter.docx  cover_letter.md  resume.docx  resume_tailored.md
artifacts/1bea5ebd43a2/Azure_Ai_Engineer_Jobs_Employment_Indeed/: cover_letter.docx
artifacts/1bea5ebd43a2/Entry_Level_Azure_Ai_Engineer_Jobs_Emplo/: ats_verification.json  cover_letter.docx  resume.docx  resume_baseline.md
artifacts/1bea5ebd43a2/Microsoft_hiring_Cloud_Solution_Architec/: cover_letter.docx  resume.docx  resume_tailored.md
artifacts/55cef6e490c3/AI_Engineer_Copilot_Studio_Azure_AI_REMO/: cover_letter.docx  cover_letter.md  resume.docx  resume_tailored.md
artifacts/55cef6e490c3/Jobgether_hiring_Senior_AI_Engineer_REMO/: ats_verification.json  cover_letter.docx  cover_letter.md  resume_baseline.md
artifacts/55cef6e490c3/Senior_AI_Engineer_Careers_at_Paper_Mywo/: cover_letter.docx  cover_letter.md  resume.docx  resume_tailored.md
artifacts/55cef6e490c3/Senior_AI_Engineer_Remote_from_Canada_Li/: ats_verification.json  cover_letter.docx  cover_letter.md
artifacts/55cef6e490c3/Toyo_hiring_Senior_AI_Engineer_in_Canada/: ats_verification.json  cover_letter.docx  cover_letter.md
artifacts/86c42391ecb1/475_Machine_Learning_Ai_Engineer_Jobs_In/: cover_letter.docx
artifacts/86c42391ecb1/AI_Engineer_Copilot_Studio_Azure_AI_REMO/: cover_letter.docx  cover_letter.md
artifacts/86c42391ecb1/Jobs_via_Dice_hiring_AI_Engineers_in_Uni/: cover_letter.docx  cover_letter.md  resume.docx
artifacts/86c42391ecb1/Microsoft_Azure_Machine_Learning_Jobs_Em/: cover_letter.docx  cover_letter.md
artifacts/86c42391ecb1/Open_Ai_Entry_Level_Engineering_Jobs_Emp/: cover_letter.docx  cover_letter.md
artifacts/b49e6f45aba6/Flexible_Azure_Ai_Engineer_Jobs_Apply_To/: ats_verification.json  cover_letter.docx  resume.docx  resume_tailored.md
artifacts/b49e6f45aba6/Job_Application_for_Senior_AI_Engineer_a/: ats_verification.json  cover_letter.docx  cover_letter.md  resume.docx
artifacts/b49e6f45aba6/Jobgether_hiring_Senior_AI_Engineer_REMO/: cover_letter.docx  cover_letter.md
artifacts/b49e6f45aba6/Senior_AI_Engineer_Careers_at_Paper_Mywo/: ats_verification.json  cover_letter.docx  cover_letter.md
artifacts/b49e6f45aba6/Senior_Lead_AI_Engineer_Remote_Eligible_/: ats_verification.json  cover_letter.docx  cover_letter.md
artifacts/c1bae1a68837/Azure_jobs_in_Remote_Indeed/: ats_verification.json  cover_letter.docx  cover_letter.md  resume.docx  resume_tailored.md
artifacts/c1bae1a68837/Flexible_Azure_Ai_Engineer_Jobs_Apply_To/: ats_verification.json  cover_letter.docx  cover_letter.md  resume.docx  resume_baseline.md  resume_tailored.md
artifacts/c1bae1a68837/Flexible_Openai_Openai_Jobs_Apply_Today_/: ats_verification.json  cover_letter.docx  cover_letter.md  resume.docx  resume_tailored.md
artifacts/c1bae1a68837/Open_Ai_Entry_Level_Engineering_Jobs_Emp/: resume.docx  (+4 more)
artifacts/inputs/: job.json  raw_resume.txt
artifacts/l2/: extracted_resume_attempt_1.json
artifacts/l4/: match_report_job_001.json
artifacts/l5/: pivot_strategy_job_001_attempt_1.json  pivot_strategy_job_001_attempt_2.json
artifacts/l6/: cover_letter_job_001_attempt_1.md
artifacts/l7/: submission_de9ef008cbc94279ae7f6a02dcf0d37a.json
artifacts/l8/: status_updates.json
artifacts/l9/: analytics_report.json  final_audit_report.json
data/demo/: job.txt  job_description_ml_platform.txt  resume_sample_backend_ml.txt
docs/: 10_layer_strategic_roadmap.md  PATCH_NOTES.md  PORTFOLIO.md  REPO_DEEP_DIVE_AND_GAP_PLAN.md  SETUP_AND_VALIDATION.md
newfolder/: runtime_nodes.py
notebooks/: README_DEPLOY.md  final_setup.ipynb  migration_experiments.ipynb
notebooks_v2/: 11_one_click_autonomy_beta_v2.ipynb  12A_fix_paths_and_cleanup_v2.ipynb  12_one_click_upload_ui_fix_v2.ipynb  13_p25_one_click_notebook.ipynb  14_fix_realtime_progress_run_manager.ipynb  14_newexperiment.ipynb  15_fix_progress_and_background_runner.ipynb  16_backend_fix_wiring_and_progress.ipynb  18_fix_hanging_layers_threaded_timeout.ipynb  19_fix_L0_hang_and_hard_timeouts.ipynb  20_fix_L0_in_runtime_nodes.ipynb  21_fix_L3_discovery_and_persist_urls.ipynb  22_fix_L2_L5_local_first_and_persist_artifacts.ipynb  23_fix_hitl_buttons_and_draft_flow.ipynb
scripts/: backup_and_apply_patch.sh
sqlitecloud:/cgljsxqddz.g1.sqlite.cloud:8860/: auth.sqlitecloud?apikey=w1dHWjdGlwKEpfm8YhZoHYftbNx6y23QmIPLRrVNFmg
src/: httpx.py
src/careeragent/: __init__.py  config.py  ops_check.py
src/pydantic/: __init__.py
src/pydantic_bridge_backup/: version.py
src/pydantic_settings/: __init__.py
streamlit/: __init__.py  __main__.py
tests/: test_runtime_flow.py
tests/unit/: test_api_main_entrypoint.py  test_api_pipeline_fixes.py  test_approval_utils.py  test_cognitive_upgrades.py  test_hitl_contract.py  test_langsmith_status.py  test_matcher_parser_enhancements.py  test_mcp_url_normalization.py  test_next_step_automation_loop.py  test_notification_service.py  test_parser_and_drafting_guards.py  test_parser_dual_phase.py  test_reject_drafts_loop.py  test_requests_shim.py  test_resume_parsing_and_discovery_improvements.py  test_resume_pipeline_fixes.py  test_smoke.py
(+206 files in other folders)
