[project]
name = "careeragent-ai"
version = "0.1.0"
description = "CareerAgent-AI: stateful agentic career automation with LangGraph + FastAPI + Gradio"
readme = "README.md"
requires-python = ">=3.10,<3.13"

# Core Operational Dependencies (The "Engine")
dependencies = [   # Environment variable and config management
  "requests>=2.32",           # Backend API layer
  "uvicorn>=0.27",            # ASGI server for FastAPI
  "langgraph>=0.2.0",         # Orchestration of agentic state loops
  "langchain-core>=0.2.0",    # Base abstractions for LLM interactions
  "python-dotenv>=1.0",       # Local secret management (.env)
  "loguru>=0.7.2",            # Production-grade structured logging
  "tenacity>=8.2",            # Exponential backoff/retry logic for API stability
  "httpx>=0.27",              # Async HTTP client for external service calls
  "orjson>=3.10",             # High-performance JSON serialization
  "reportlab>=4.4.10",        # PDF generation for resumes/reports
  "streamlit>=1.33",          # Dashboard for mission control
  "streamlit-autorefresh>=1.0.1",
  "pypdf>=6.7.1",             # Parsing existing PDF resumes
  "python-multipart>=0.0.22", # Handling file uploads in FastAPI
  "python-docx>=1.2.0",       # Creating ATS-friendly .docx resumes
  "langchain-anthropic>=1.3.4", # Integration for Claude-based reasoning
  "langsmith>=0.7.5",         # Tracing and observability for agent debugging
  "firecrawl-py>=4.16.3",     # Advanced web scraping/job data extraction
  "playwright>=1.40.0",       # L7: Browser automation for auto-applying
  "playwright-stealth>=1.0.6",
  "ntfy>=0.3.0",              # L5/L8: Push notifications for HITL events
  "twilio>=9.10.2",
  "google-api-python-client>=2.177.0",
  "google-auth>=2.40.3",
  "pytest>=9.0.2",
  "pytest-asyncio>=0.23.0",
  "fastapi[standard]>=0.110.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
ui = [
  "gradio>=4.0",              # Alternative UI for rapid prototyping
]
infra = [
  "azure-storage-blob>=12.19",# Cloud storage for resume/document persistence
  "mlflow>=2.12",             # Experiment tracking for prompt/model tuning
]
ml = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.4",        # Traditional ML for scoring models
  "rapidfuzz>=3.7",           # High-speed string matching for ATS scoring
]
docs = ["mkdocs-material>=9.5"]

[dependency-groups]
dev = [
  "pydantic>=2.0",
  "pydantic-settings>=2.2",
  "pytest>=8.0",              # Unit and integration testing
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0",          # Test coverage reporting
  "ruff>=0.6.0",              # Fast linting and formatting
  "mypy>=1.8",                # Static type checking
  "pre-commit>=3.6",          # Git hooks for code quality
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/careeragent"]

[tool.uv]
managed = true


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/unit", "tests/integration"]
